--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Nathan Vegdahl <cessen@cessen.com>"]
 edition = "2018"
 
 [dependencies]
-rand = "0.8"
 clap = "2"
+getrandom = "0.2"
 num-bigint = "0.3"
